fix: padding on mobile screens

--- a/styles/Editor.module.scss
+++ b/styles/Editor.module.scss
@@ -14,7 +14,4 @@
   @media only screen and (max-width: 768px) {
     padding: 2rem;
   }
-  @media only screen and (max-width: 500px) {
-    padding: 1rem;
-  }
 }
